--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 }
 
                 function gosite() {
-                    window.open("https://huaxv-code.github.io/huaxv-problemset/site/");
+                    window.open("https://huaxvcode.github.io/huaxvsite/site/");
                 }
 
                 window.onload = function () {
