关于整除的一些结论.md

--- a/site/板子/关于整除的一些结论/index.html
+++ b/site/板子/关于整除的一些结论/index.html
@@ -3103,6 +3103,18 @@
 <li>再求出 <span class="arithmatex">\((a, b)t + cz = ((a, b), c)\)</span> 的一对特解，记为 <span class="arithmatex">\(t_1, z_1\)</span></li>
 <li>则 <span class="arithmatex">\(ax + by + cz = (a, b, c)\)</span> 的特解为：<span class="arithmatex">\((x_1t_1, y_1t_1, z_1)\)</span></li>
 </ol>
+<h2 id="_6">同余的一些性质</h2>
+<p>若 <span class="arithmatex">\(a \equiv b (\bmod \ m)\)</span> 且 <span class="arithmatex">\(a \equiv b (\bmod \ n)\)</span> 成立，则 <span class="arithmatex">\(a \equiv b (\bmod \ [m, n])\)</span></p>
+<blockquote>
+<p><span class="arithmatex">\(m | a - b, n | a - b\)</span> 所以 <span class="arithmatex">\([m, n] | a - b\)</span></p>
+</blockquote>
+<p>若 <span class="arithmatex">\((k, m) = d\)</span>，且 <span class="arithmatex">\(ka \equiv ka\prime (\bmod \ m)\)</span> 则 <span class="arithmatex">\(a \equiv a\prime (\bmod \frac{m}{d})\)</span></p>
+<blockquote>
+<p><span class="arithmatex">\(m | k(a - a\prime)\)</span></p>
+<p><span class="arithmatex">\(\frac{m}{d} | \frac{k}{d}(a - a\prime)\)</span></p>
+<p>因为 <span class="arithmatex">\(d\)</span> 是 <span class="arithmatex">\(m\)</span> 和 <span class="arithmatex">\(k\)</span> 的最大公约数，所以 <span class="arithmatex">\(\frac{m}{d}\)</span> 与 <span class="arithmatex">\(\frac{k}{d}\)</span> 互质</p>
+<p>所以就只可能：<span class="arithmatex">\(\frac{m}{d} | a - a\prime\)</span></p>
+</blockquote>
 
 
 
