--- a/site/板子/数论的一些知识/index.html
+++ b/site/板子/数论的一些知识/index.html
@@ -3256,6 +3256,9 @@
 <a id="__codelineno-8-24" name="__codelineno-8-24" href="#__codelineno-8-24"></a><span class="w">    </span><span class="k">return</span><span class="w"> </span><span class="mi">0</span><span class="p">;</span>
 <a id="__codelineno-8-25" name="__codelineno-8-25" href="#__codelineno-8-25"></a><span class="p">}</span>
 </code></pre></div>
+<h2 id="_12">欧拉定理</h2>
+<p>令 <span class="arithmatex">\(1 \sim m\)</span> 范围内与 <span class="arithmatex">\(m\)</span> 互质的个数为 <span class="arithmatex">\(f(m)\)</span>，若 <span class="arithmatex">\(\gcd(a, m) \equiv 1\)</span> 则 <span class="arithmatex">\(a ^ {f(m)} \equiv 1 (\bmod \ m)\)</span></p>
+<p>特殊情况下，若 <span class="arithmatex">\(m\)</span> 是质数，则 <span class="arithmatex">\(f(m) = m - 1\)</span>，所以有：<span class="arithmatex">\(a^{m - 1} \equiv 1 (\bmod \ m)\)</span></p>
 
 
 
