--- a/site/板子/数论的一些知识/index.html
+++ b/site/板子/数论的一些知识/index.html
@@ -3430,6 +3430,20 @@
 <a id="__codelineno-15-2" name="__codelineno-15-2" href="#__codelineno-15-2"></a><span class="w">    </span><span class="k">return</span><span class="w"> </span><span class="n">rlong</span><span class="p">()</span><span class="w"> </span><span class="o">%</span><span class="w"> </span><span class="n">n</span><span class="w"> </span><span class="o">+</span><span class="w"> </span><span class="mi">1</span><span class="p">;</span>
 <a id="__codelineno-15-3" name="__codelineno-15-3" href="#__codelineno-15-3"></a><span class="p">}</span>
 </code></pre></div>
+<h2 id="_18">中国剩余定理</h2>
+<p>若 <span class="arithmatex">\(m_1, m_2, \cdots, m_n\)</span> 两两互质，则同余方程：</p>
+<blockquote>
+<p><span class="arithmatex">\(x = a_1 (\bmod \ m_1)\)</span>
+<span class="arithmatex">\(x = a_2 (\bmod \ m_2)\)</span>
+<span class="arithmatex">\(\cdots \ \cdots\)</span>
+<span class="arithmatex">\(x = a_n (\bmod \ m_n)\)</span></p>
+</blockquote>
+<p>有唯一解，且 <span class="arithmatex">\(\bmod \ M\)</span> 的解唯一，<span class="arithmatex">\(M = m_1 * m_2 * \cdots m_n\)</span></p>
+<p>令 <span class="arithmatex">\(M_i = \frac{M}{m_i}\)</span>，<span class="arithmatex">\(M_i^{-1}\)</span> 为模 <span class="arithmatex">\(m_i\)</span> 的逆元</p>
+<p>则解为：</p>
+<blockquote>
+<p><span class="arithmatex">\(x = a_1M_1M_1^{-1} + a_2M_2M_2^{-1} + \cdots + a_nM_nM_n^{-1}\)</span></p>
+</blockquote>
 
 
 
