数论的一些知识.md

--- a/site/板子/数论的一些知识/index.html
+++ b/site/板子/数论的一些知识/index.html
@@ -3442,7 +3442,7 @@
 <p>令 <span class="arithmatex">\(M_i = \frac{M}{m_i}\)</span>，<span class="arithmatex">\(M_i^{-1}\)</span> 为模 <span class="arithmatex">\(m_i\)</span> 的逆元</p>
 <p>则解为：</p>
 <blockquote>
-<p><span class="arithmatex">\(x = a_1M_1M_1^{-1} + a_2M_2M_2^{-1} + \cdots + a_nM_nM_n^{-1}\)</span></p>
+<p><span class="arithmatex">\(x \equiv (a_1M_1M_1^{-1} + a_2M_2M_2^{-1} + \cdots + a_nM_nM_n^{-1}) \bmod M\)</span></p>
 </blockquote>
 
 
