数论的一些知识.md

--- a/site/板子/数论的一些知识/index.html
+++ b/site/板子/数论的一些知识/index.html
@@ -3313,7 +3313,7 @@
 <ol>
 <li><span class="arithmatex">\(a | c\)</span>、<span class="arithmatex">\(b | c\)</span>，且 <span class="arithmatex">\((a, b) = 1\)</span> 则 <span class="arithmatex">\(ab | c\)</span></li>
 <li><span class="arithmatex">\(a | bc\)</span> 且 <span class="arithmatex">\((a, b) = 1\)</span>，则 <span class="arithmatex">\(a | c\)</span></li>
-<li><span class="arithmatex">\(p | ab\)</span> 则 <span class="arithmatex">\(p | a\)</span> 或 <span class="arithmatex">\(p | b\)</span></li>
+<li><span class="arithmatex">\(p | ab\)</span> 则 <span class="arithmatex">\(p | a\)</span> 或 <span class="arithmatex">\(p | b\)</span>，前提是 <span class="arithmatex">\(p\)</span> 是质数</li>
 </ol>
 <hr />
 <ol>
