--- a/site/板子/数论的一些知识/index.html
+++ b/site/板子/数论的一些知识/index.html
@@ -3484,6 +3484,53 @@
 
 
 <h1 id="_1"><a href="">数论的一些知识</a></h1>
+<ul>
+<li><a href="#数论的一些知识">数论的一些知识</a></li>
+<li><a href="#一些常识">一些常识</a></li>
+<li><a href="#取模然后对约数取模或者直接对约数取模效果一样">取模然后对约数取模，或者直接对约数取模，效果一样</a></li>
+<li><a href="#最大公约数">最大公约数：</a></li>
+<li><a href="#最小公倍数">最小公倍数：</a></li>
+<li><a href="#关于整数解">关于整数解：</a></li>
+<li><a href="#扩展欧几里得">扩展欧几里得：</a></li>
+<li><a href="#求方程-ax--by--c-的通解">求方程 ax + by = c 的通解：</a></li>
+<li><a href="#求一组-ax--by--c-的正整数解">求一组 ax + by = c 的正整数解：</a></li>
+<li><a href="#求-ax-mod-m-的最小值">求 ax mod m 的最小值</a></li>
+<li><a href="#求-ax--by-mod-m-的最小值">求 (ax + by) mod m 的最小值</a></li>
+<li><a href="#求-ax--by--c-mod-m-的最小值">求 (ax + by + c) mod m 的最小值</a></li>
+<li><a href="#关于方程-ax--by--cz--d-的特解">关于方程 ax + by + cz = d 的特解：</a></li>
+<li><a href="#同余的一些性质">同余的一些性质</a></li>
+<li><a href="#容斥原理">容斥原理</a></li>
+<li><a href="#组合数">组合数</a><ul>
+<li><a href="#排列组合">排列组合</a></li>
+<li><a href="#求组合数">求组合数</a></li>
+</ul>
+</li>
+<li><a href="#欧拉函数">欧拉函数</a></li>
+<li><a href="#欧拉定理">欧拉定理</a></li>
+<li><a href="#高精度加法">高精度加法</a></li>
+<li><a href="#高精度减法">高精度减法</a></li>
+<li><a href="#高精度乘法">高精度乘法</a></li>
+<li><a href="#高精度除以单精度">高精度除以单精度</a></li>
+<li><a href="#逆元">逆元</a><ul>
+<li><a href="#快速幂求逆元">快速幂求逆元：</a></li>
+<li><a href="#exgcd-求逆元">exgcd 求逆元：</a></li>
+</ul>
+</li>
+<li><a href="#逆元递推式">逆元递推式：</a></li>
+<li><a href="#借助前缀乘法求逆元">借助前缀乘法求逆元</a></li>
+<li><a href="#生成随机数">生成随机数</a></li>
+<li><a href="#中国剩余定理">中国剩余定理</a></li>
+<li><a href="#筛质数">筛质数</a><ul>
+<li><a href="#欧拉筛法">欧拉筛法</a></li>
+<li><a href="#埃式筛法">埃式筛法</a></li>
+</ul>
+</li>
+<li><a href="#miller-rabin-判断素数">miller-rabin 判断素数</a></li>
+<li><a href="#整数分块">整数分块</a></li>
+<li><a href="#快速幂">快速幂</a></li>
+<li><a href="#模乘">模乘</a></li>
+<li><a href="#高精度整数运算">高精度整数运算</a></li>
+</ul>
 <h2 id="_2">一些常识</h2>
 <ol>
 <li><span class="arithmatex">\(a | c\)</span>、<span class="arithmatex">\(b | c\)</span>，且 <span class="arithmatex">\((a, b) = 1\)</span> 则 <span class="arithmatex">\(ab | c\)</span></li>
