字符串知识汇总.md

--- a/site/板子/字符串知识汇总/index.html
+++ b/site/板子/字符串知识汇总/index.html
@@ -3234,7 +3234,7 @@
   
 
 
-<h1 id="_1"><a href="">字符串知识汇总</a></h1>
+<h1 id="_1">字符串知识汇总</h1>
 <ul>
 <li><a href="#字符串知识汇总">字符串知识汇总</a></li>
 <li><a href="#字符串哈希">字符串哈希</a></li>
