vscode 连接 ubuntu20.04.md

--- a/site/vscode/vscode 连接 ubuntu20.04/index.html
+++ b/site/vscode/vscode 连接 ubuntu20.04/index.html
@@ -4859,6 +4859,7 @@
 <a id="__codelineno-18-2" name="__codelineno-18-2" href="#__codelineno-18-2"></a>g++<span class="w"> </span>-v
 <a id="__codelineno-18-3" name="__codelineno-18-3" href="#__codelineno-18-3"></a>python3
 <a id="__codelineno-18-4" name="__codelineno-18-4" href="#__codelineno-18-4"></a>java<span class="w"> </span>-version
+<a id="__codelineno-18-5" name="__codelineno-18-5" href="#__codelineno-18-5"></a>javac<span class="w"> </span>--version
 </code></pre></div>
 
 
