--- a/site/每日英语/Lesson 9/index.html
+++ b/site/每日英语/Lesson 9/index.html
@@ -4977,16 +4977,18 @@
 <a id="__codelineno-2-12" name="__codelineno-2-12" href="#__codelineno-2-12"></a>
 <a id="__codelineno-2-13" name="__codelineno-2-13" href="#__codelineno-2-13"></a>Town Hall 市政厅
 <a id="__codelineno-2-14" name="__codelineno-2-14" href="#__codelineno-2-14"></a>
-<a id="__codelineno-2-15" name="__codelineno-2-15" href="#__codelineno-2-15"></a>at five to twelve 在 5 分钟到 12 点（11:55）
+<a id="__codelineno-2-15" name="__codelineno-2-15" href="#__codelineno-2-15"></a>strike 碰撞
 <a id="__codelineno-2-16" name="__codelineno-2-16" href="#__codelineno-2-16"></a>
-<a id="__codelineno-2-17" name="__codelineno-2-17" href="#__codelineno-2-17"></a>minute hand 分针
+<a id="__codelineno-2-17" name="__codelineno-2-17" href="#__codelineno-2-17"></a>at five to twelve 在 5 分钟到 12 点（11:55）
 <a id="__codelineno-2-18" name="__codelineno-2-18" href="#__codelineno-2-18"></a>
-<a id="__codelineno-2-19" name="__codelineno-2-19" href="#__codelineno-2-19"></a>two minutes past twelve 12 点已经过去了 2 分钟（12:02）
+<a id="__codelineno-2-19" name="__codelineno-2-19" href="#__codelineno-2-19"></a>minute hand 分针
 <a id="__codelineno-2-20" name="__codelineno-2-20" href="#__codelineno-2-20"></a>
-<a id="__codelineno-2-21" name="__codelineno-2-21" href="#__codelineno-2-21"></a>refuse 拒绝
+<a id="__codelineno-2-21" name="__codelineno-2-21" href="#__codelineno-2-21"></a>two minutes past twelve 12 点已经过去了 2 分钟（12:02）
 <a id="__codelineno-2-22" name="__codelineno-2-22" href="#__codelineno-2-22"></a>
-<a id="__codelineno-2-23" name="__codelineno-2-23" href="#__codelineno-2-23"></a>the big clock refused to welcome the New Year
-<a id="__codelineno-2-24" name="__codelineno-2-24" href="#__codelineno-2-24"></a>这大钟拒绝欢迎新年
+<a id="__codelineno-2-23" name="__codelineno-2-23" href="#__codelineno-2-23"></a>refuse 拒绝
+<a id="__codelineno-2-24" name="__codelineno-2-24" href="#__codelineno-2-24"></a>
+<a id="__codelineno-2-25" name="__codelineno-2-25" href="#__codelineno-2-25"></a>the big clock refused to welcome the New Year
+<a id="__codelineno-2-26" name="__codelineno-2-26" href="#__codelineno-2-26"></a>这大钟拒绝欢迎新年
 </code></pre></div>
 
 
