创建新用户.md

--- a/site/Linux/创建新用户/index.html
+++ b/site/Linux/创建新用户/index.html
@@ -5139,6 +5139,9 @@
 <a id="__codelineno-0-12" name="__codelineno-0-12" href="#__codelineno-0-12"></a>
 <a id="__codelineno-0-13" name="__codelineno-0-13" href="#__codelineno-0-13"></a><span class="c1"># 切换新用户</span>
 <a id="__codelineno-0-14" name="__codelineno-0-14" href="#__codelineno-0-14"></a>su<span class="w"> </span>-<span class="w"> </span>huaxvtemp
+<a id="__codelineno-0-15" name="__codelineno-0-15" href="#__codelineno-0-15"></a>
+<a id="__codelineno-0-16" name="__codelineno-0-16" href="#__codelineno-0-16"></a><span class="c1"># 删除用户</span>
+<a id="__codelineno-0-17" name="__codelineno-0-17" href="#__codelineno-0-17"></a>deluser<span class="w"> </span>huaxvtemp
 </code></pre></div>
 
 
