--- a/site/Linux/oj 评测系统/index.html
+++ b/site/Linux/oj 评测系统/index.html
@@ -5212,6 +5212,14 @@
 <a id="__codelineno-0-25" name="__codelineno-0-25" href="#__codelineno-0-25"></a>language<span class="w"> </span>后缀只能是：
 <a id="__codelineno-0-26" name="__codelineno-0-26" href="#__codelineno-0-26"></a>
 <a id="__codelineno-0-27" name="__codelineno-0-27" href="#__codelineno-0-27"></a><span class="w">    </span>cpp<span class="w"> </span>、java、py
+<a id="__codelineno-0-28" name="__codelineno-0-28" href="#__codelineno-0-28"></a>
+<a id="__codelineno-0-29" name="__codelineno-0-29" href="#__codelineno-0-29"></a><span class="c1">## 获取一次样例</span>
+<a id="__codelineno-0-30" name="__codelineno-0-30" href="#__codelineno-0-30"></a><span class="c1">## 使用 Random.language1、Answer.language2 来获取一次样例</span>
+<a id="__codelineno-0-31" name="__codelineno-0-31" href="#__codelineno-0-31"></a>oj<span class="w"> </span>one<span class="w"> </span>language1<span class="w"> </span>language2
+<a id="__codelineno-0-32" name="__codelineno-0-32" href="#__codelineno-0-32"></a>
+<a id="__codelineno-0-33" name="__codelineno-0-33" href="#__codelineno-0-33"></a><span class="c1">## 获取 10 个样例</span>
+<a id="__codelineno-0-34" name="__codelineno-0-34" href="#__codelineno-0-34"></a><span class="c1">## 样例需要放入 data 文件夹中</span>
+<a id="__codelineno-0-35" name="__codelineno-0-35" href="#__codelineno-0-35"></a><span class="c1">## 第 i 个样例组应该以：in_i.in、out_i.out 的格式命名</span>
 </code></pre></div>
 
 
