--- a/site/Linux/oj 评测系统/index.html
+++ b/site/Linux/oj 评测系统/index.html
@@ -5191,8 +5191,8 @@
 <a id="__codelineno-0-4" name="__codelineno-0-4" href="#__codelineno-0-4"></a><span class="c1">## in.txt 作为输入，run.txt 作为输出，out.txt 作为答案</span>
 <a id="__codelineno-0-5" name="__codelineno-0-5" href="#__codelineno-0-5"></a>oj<span class="w"> </span>Main.language
 <a id="__codelineno-0-6" name="__codelineno-0-6" href="#__codelineno-0-6"></a>
-<a id="__codelineno-0-7" name="__codelineno-0-7" href="#__codelineno-0-7"></a><span class="c1">## 编译 Main.language 文件</span>
-<a id="__codelineno-0-8" name="__codelineno-0-8" href="#__codelineno-0-8"></a>cp<span class="w"> </span>Main.language
+<a id="__codelineno-0-7" name="__codelineno-0-7" href="#__codelineno-0-7"></a><span class="c1">## 多线程编译文件</span>
+<a id="__codelineno-0-8" name="__codelineno-0-8" href="#__codelineno-0-8"></a>cp<span class="w"> </span>file1.language<span class="w"> </span>file2.language<span class="w"> </span>file3.language<span class="w"> </span>...
 <a id="__codelineno-0-9" name="__codelineno-0-9" href="#__codelineno-0-9"></a>
 <a id="__codelineno-0-10" name="__codelineno-0-10" href="#__codelineno-0-10"></a><span class="c1">## 运行，in.txt 作为输入, run.txt 作为输出</span>
 <a id="__codelineno-0-11" name="__codelineno-0-11" href="#__codelineno-0-11"></a>rn<span class="w"> </span>Main.language
@@ -5220,6 +5220,7 @@
 <a id="__codelineno-0-33" name="__codelineno-0-33" href="#__codelineno-0-33"></a><span class="c1">## 获取 10 个样例</span>
 <a id="__codelineno-0-34" name="__codelineno-0-34" href="#__codelineno-0-34"></a><span class="c1">## 样例需要放入 data 文件夹中</span>
 <a id="__codelineno-0-35" name="__codelineno-0-35" href="#__codelineno-0-35"></a><span class="c1">## 第 i 个样例组应该以：in_i.in、out_i.out 的格式命名</span>
+<a id="__codelineno-0-36" name="__codelineno-0-36" href="#__codelineno-0-36"></a>oj<span class="w"> </span>get<span class="w"> </span><span class="m">10</span>
 </code></pre></div>
 
 
