--- a/site/每日英语/高频单词/index.html
+++ b/site/每日英语/高频单词/index.html
@@ -5027,6 +5027,30 @@
 <a id="__codelineno-0-126" name="__codelineno-0-126" href="#__codelineno-0-126"></a>
 <a id="__codelineno-0-127" name="__codelineno-0-127" href="#__codelineno-0-127"></a>species
 <a id="__codelineno-0-128" name="__codelineno-0-128" href="#__codelineno-0-128"></a>物种、种类
+<a id="__codelineno-0-129" name="__codelineno-0-129" href="#__codelineno-0-129"></a>
+<a id="__codelineno-0-130" name="__codelineno-0-130" href="#__codelineno-0-130"></a>colleague
+<a id="__codelineno-0-131" name="__codelineno-0-131" href="#__codelineno-0-131"></a>同事、同僚
+<a id="__codelineno-0-132" name="__codelineno-0-132" href="#__codelineno-0-132"></a>
+<a id="__codelineno-0-133" name="__codelineno-0-133" href="#__codelineno-0-133"></a>force
+<a id="__codelineno-0-134" name="__codelineno-0-134" href="#__codelineno-0-134"></a>力量、武力、军队、促使、强迫
+<a id="__codelineno-0-135" name="__codelineno-0-135" href="#__codelineno-0-135"></a>
+<a id="__codelineno-0-136" name="__codelineno-0-136" href="#__codelineno-0-136"></a>income
+<a id="__codelineno-0-137" name="__codelineno-0-137" href="#__codelineno-0-137"></a>收入、收益、所得
+<a id="__codelineno-0-138" name="__codelineno-0-138" href="#__codelineno-0-138"></a>
+<a id="__codelineno-0-139" name="__codelineno-0-139" href="#__codelineno-0-139"></a>prove
+<a id="__codelineno-0-140" name="__codelineno-0-140" href="#__codelineno-0-140"></a>证明、验证、显示
+<a id="__codelineno-0-141" name="__codelineno-0-141" href="#__codelineno-0-141"></a>
+<a id="__codelineno-0-142" name="__codelineno-0-142" href="#__codelineno-0-142"></a>reward
+<a id="__codelineno-0-143" name="__codelineno-0-143" href="#__codelineno-0-143"></a>报酬、报答、酬谢、奖励、奖赏
+<a id="__codelineno-0-144" name="__codelineno-0-144" href="#__codelineno-0-144"></a>
+<a id="__codelineno-0-145" name="__codelineno-0-145" href="#__codelineno-0-145"></a>contribute
+<a id="__codelineno-0-146" name="__codelineno-0-146" href="#__codelineno-0-146"></a>贡献、出力、投稿、捐献
+<a id="__codelineno-0-147" name="__codelineno-0-147" href="#__codelineno-0-147"></a>
+<a id="__codelineno-0-148" name="__codelineno-0-148" href="#__codelineno-0-148"></a>effective
+<a id="__codelineno-0-149" name="__codelineno-0-149" href="#__codelineno-0-149"></a>有效的、起作用的、实际的
+<a id="__codelineno-0-150" name="__codelineno-0-150" href="#__codelineno-0-150"></a>
+<a id="__codelineno-0-151" name="__codelineno-0-151" href="#__codelineno-0-151"></a>evidence
+<a id="__codelineno-0-152" name="__codelineno-0-152" href="#__codelineno-0-152"></a>证据、证明、迹象、明显
 </code></pre></div>
 
 
