--- a/site/每日英语/高频单词/index.html
+++ b/site/每日英语/高频单词/index.html
@@ -5051,6 +5051,66 @@
 <a id="__codelineno-0-150" name="__codelineno-0-150" href="#__codelineno-0-150"></a>
 <a id="__codelineno-0-151" name="__codelineno-0-151" href="#__codelineno-0-151"></a>evidence
 <a id="__codelineno-0-152" name="__codelineno-0-152" href="#__codelineno-0-152"></a>证据、证明、迹象、明显
+<a id="__codelineno-0-153" name="__codelineno-0-153" href="#__codelineno-0-153"></a>
+<a id="__codelineno-0-154" name="__codelineno-0-154" href="#__codelineno-0-154"></a>trend
+<a id="__codelineno-0-155" name="__codelineno-0-155" href="#__codelineno-0-155"></a>趋势、倾向、伸向
+<a id="__codelineno-0-156" name="__codelineno-0-156" href="#__codelineno-0-156"></a>
+<a id="__codelineno-0-157" name="__codelineno-0-157" href="#__codelineno-0-157"></a>amount 
+<a id="__codelineno-0-158" name="__codelineno-0-158" href="#__codelineno-0-158"></a>数量、总数、总计、等于
+<a id="__codelineno-0-159" name="__codelineno-0-159" href="#__codelineno-0-159"></a>
+<a id="__codelineno-0-160" name="__codelineno-0-160" href="#__codelineno-0-160"></a>approach
+<a id="__codelineno-0-161" name="__codelineno-0-161" href="#__codelineno-0-161"></a>走进、处理、方法、接近
+<a id="__codelineno-0-162" name="__codelineno-0-162" href="#__codelineno-0-162"></a>
+<a id="__codelineno-0-163" name="__codelineno-0-163" href="#__codelineno-0-163"></a>field
+<a id="__codelineno-0-164" name="__codelineno-0-164" href="#__codelineno-0-164"></a>领域、旷野、战场、运动场
+<a id="__codelineno-0-165" name="__codelineno-0-165" href="#__codelineno-0-165"></a>
+<a id="__codelineno-0-166" name="__codelineno-0-166" href="#__codelineno-0-166"></a>performance
+<a id="__codelineno-0-167" name="__codelineno-0-167" href="#__codelineno-0-167"></a>表演、执行、表现
+<a id="__codelineno-0-168" name="__codelineno-0-168" href="#__codelineno-0-168"></a>
+<a id="__codelineno-0-169" name="__codelineno-0-169" href="#__codelineno-0-169"></a>pressure
+<a id="__codelineno-0-170" name="__codelineno-0-170" href="#__codelineno-0-170"></a>压力、压迫、迫使、密封
+<a id="__codelineno-0-171" name="__codelineno-0-171" href="#__codelineno-0-171"></a>
+<a id="__codelineno-0-172" name="__codelineno-0-172" href="#__codelineno-0-172"></a>shift
+<a id="__codelineno-0-173" name="__codelineno-0-173" href="#__codelineno-0-173"></a>转移、改变、转向
+<a id="__codelineno-0-174" name="__codelineno-0-174" href="#__codelineno-0-174"></a>
+<a id="__codelineno-0-175" name="__codelineno-0-175" href="#__codelineno-0-175"></a>emission
+<a id="__codelineno-0-176" name="__codelineno-0-176" href="#__codelineno-0-176"></a>发射、散发、喷射、发行
+<a id="__codelineno-0-177" name="__codelineno-0-177" href="#__codelineno-0-177"></a>
+<a id="__codelineno-0-178" name="__codelineno-0-178" href="#__codelineno-0-178"></a>account
+<a id="__codelineno-0-179" name="__codelineno-0-179" href="#__codelineno-0-179"></a>账户、解释、账目、描述、认为
+<a id="__codelineno-0-180" name="__codelineno-0-180" href="#__codelineno-0-180"></a>
+<a id="__codelineno-0-181" name="__codelineno-0-181" href="#__codelineno-0-181"></a>track
+<a id="__codelineno-0-182" name="__codelineno-0-182" href="#__codelineno-0-182"></a>追踪、通过、轨道、踪迹、小道
+<a id="__codelineno-0-183" name="__codelineno-0-183" href="#__codelineno-0-183"></a>
+<a id="__codelineno-0-184" name="__codelineno-0-184" href="#__codelineno-0-184"></a>claim
+<a id="__codelineno-0-185" name="__codelineno-0-185" href="#__codelineno-0-185"></a>宣称、要求、索取
+<a id="__codelineno-0-186" name="__codelineno-0-186" href="#__codelineno-0-186"></a>
+<a id="__codelineno-0-187" name="__codelineno-0-187" href="#__codelineno-0-187"></a>department
+<a id="__codelineno-0-188" name="__codelineno-0-188" href="#__codelineno-0-188"></a>部门
+<a id="__codelineno-0-189" name="__codelineno-0-189" href="#__codelineno-0-189"></a>
+<a id="__codelineno-0-190" name="__codelineno-0-190" href="#__codelineno-0-190"></a>material
+<a id="__codelineno-0-191" name="__codelineno-0-191" href="#__codelineno-0-191"></a>物质的、重要的、材料
+<a id="__codelineno-0-192" name="__codelineno-0-192" href="#__codelineno-0-192"></a>
+<a id="__codelineno-0-193" name="__codelineno-0-193" href="#__codelineno-0-193"></a>peer
+<a id="__codelineno-0-194" name="__codelineno-0-194" href="#__codelineno-0-194"></a>同等地位的人、同龄人、贵族、凝视
+<a id="__codelineno-0-195" name="__codelineno-0-195" href="#__codelineno-0-195"></a>
+<a id="__codelineno-0-196" name="__codelineno-0-196" href="#__codelineno-0-196"></a>period
+<a id="__codelineno-0-197" name="__codelineno-0-197" href="#__codelineno-0-197"></a>周期、期间、时期
+<a id="__codelineno-0-198" name="__codelineno-0-198" href="#__codelineno-0-198"></a>
+<a id="__codelineno-0-199" name="__codelineno-0-199" href="#__codelineno-0-199"></a>role
+<a id="__codelineno-0-200" name="__codelineno-0-200" href="#__codelineno-0-200"></a>角色、任务
+<a id="__codelineno-0-201" name="__codelineno-0-201" href="#__codelineno-0-201"></a>
+<a id="__codelineno-0-202" name="__codelineno-0-202" href="#__codelineno-0-202"></a>wage
+<a id="__codelineno-0-203" name="__codelineno-0-203" href="#__codelineno-0-203"></a>工资、报酬
+<a id="__codelineno-0-204" name="__codelineno-0-204" href="#__codelineno-0-204"></a>
+<a id="__codelineno-0-205" name="__codelineno-0-205" href="#__codelineno-0-205"></a>launch
+<a id="__codelineno-0-206" name="__codelineno-0-206" href="#__codelineno-0-206"></a>发射、发起、发动
+<a id="__codelineno-0-207" name="__codelineno-0-207" href="#__codelineno-0-207"></a>
+<a id="__codelineno-0-208" name="__codelineno-0-208" href="#__codelineno-0-208"></a>relate
+<a id="__codelineno-0-209" name="__codelineno-0-209" href="#__codelineno-0-209"></a>叙述、符合、设计、认同
+<a id="__codelineno-0-210" name="__codelineno-0-210" href="#__codelineno-0-210"></a>
+<a id="__codelineno-0-211" name="__codelineno-0-211" href="#__codelineno-0-211"></a>poverty
+<a id="__codelineno-0-212" name="__codelineno-0-212" href="#__codelineno-0-212"></a>贫困、困难、缺少
 </code></pre></div>
 
 
